--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "eslint": "^7.2.0",
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3"
   },
   "jest": {
     "preset": "react-native"
