--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.11.0",
-    "reactotron-react-native": "^5.0.0",
-    "reactotron-redux": "^3.1.3"
+    "reactotron-react-native": "^5.0.0"
   },
   "jest": {
     "preset": "react-native"
