--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^2.8.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.4",
+    "react-native-vector-icons": "^6.6.0",
     "yup": "^0.29.1"
   },
   "devDependencies": {
