--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.11.0",
+    "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "^5.0.0"
   },
   "jest": {
